--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/router": "~13.2.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.9",
+    "ng-block-ui": "^3.0.2",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.4.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
